--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,10 +1,9 @@
-<app-template>
 <div class="signup-container">
     <h2>Create an Account</h2>
-    <form>
+    <form [formGroup]="signupForm" (ngSubmit)="submit()">
       <div class="form-group">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" class="form-control" placeholder="Enter your full name" required>
+        <label for="name">User Name</label>
+        <input type="text" id="username" class="form-control" placeholder="Enter user name" required>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
@@ -19,5 +18,4 @@
       <p>Already have an account? <a href="/login">Sign in</a></p>
     </form>
   </div>
-</app-template>
   
