--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,13 @@
-<app-template>
 <div class="login-container">
     <h2>Abiolabs Ltd</h2>
-    <form>
+    <form [formGroup]="loginForm" (ngSubmit)="submit()">
       <div class="form-group">
         <label for="email">Email</label>
         <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+      </div>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="username" id="username" class="form-control" placeholder="Enter your username" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
@@ -15,4 +18,3 @@
       <p>New user? <a href="/signup">Sign up</a></p>
     </form>
   </div>
-</app-template>
