--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -19,7 +19,7 @@
           font-weight: bold;
         }
   
-        input[type="email"],
+        input[type="username"],
         input[type="password"] {
           width: 100%;
           padding: 10px;
