--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,15 +3,15 @@
     <form [formGroup]="signupForm" (ngSubmit)="submit()">
       <div class="form-group">
         <label for="name">User Name</label>
-        <input type="text" id="username" class="form-control" placeholder="Enter user name" required>
+        <input type="text" id="username" formControlName="username" class="form-control" placeholder="Enter user name" required>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+        <input type="email" id="email" formControlName="email" class="form-control" placeholder="Enter your email" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+        <input type="password" id="password" class="form-control" formControlName="password" placeholder="Enter your password" required>
       </div>
       <button class="btn btn-primary" type="submit">Sign Up</button>
       <hr>
