--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,11 +3,11 @@
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="username" id="username" class="form-control" placeholder="Enter your username" required>
+        <input type="username"  id="username" formControlName="username"  class="form-control" placeholder="Enter your username" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" placeholder="Enter your password" required>
+        <input type="password" id="password" formControlName="password" class="form-control" placeholder="Enter your password" required>
       </div>
       <button class="btn btn-primary" type="submit">Sign In</button>
       <hr>
