--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-6">
         <p-dropdown [options]="times" [(ngModel)]="selectedTime" placeholder="Select a time" ></p-dropdown>
-        <p-button label="Book" [disabled]="disabled" (onClick)="submitAppointment()" routerLink="."></p-button>
+        <p-button label="Book" [disabled]="disabled" (onClick)="submitAppointment()"></p-button>
       </div>
     </div>
     
